Changelog
=========

3.0c3 - Unreleased
------------------


3.0c2 - 2009-11-16
------------------

- Silence reference exceptions raised inside the reference multiplexing.
  A normal user cannot do anything about them, so we log them instead.
  [hannosch]

- Changed import from deprecated Products.Archetypes.public to
  Products.Archetypes.atapi.
  [maurits]

- Explicitly define ``portal`` inside the style_slot.
  [maurits]

- Replaced the css_slot with the style_slot, as it is deprecated.
  [maurits]

- Use new shared plonetest config file.
  [hannosch]

3.0c1 - 2009-11-04
------------------

- Don't fail on broken references in ``translated_references``.
  [hannosch]

- Adjusted tests to new default page behavior in Plone 4.
  [hannosch]

- Made use of the new getTranslations API and avoid calculating the review
  state if it is not required.
  [hannosch]

- Fixed functional tests to avoid an extraneous slash in the URL.
  [hannosch]

- Added a new I18NOnlyBaseBTreeFolder mix-in, which can be used in Plone 4 to
  give LinguaPlone behavior to the new plone.app.folder types.
  [hannosch]

- Avoid deprecation warnings for the use of the Globals package.
  [hannosch]

3.0b8 - 2009-10-22
------------------

- Adjusted the language selector to point to the nearest translation for each
  language. So far the selector only worked on items which had translations
  into all languages. Otherwise the content language negotiator would render
  the selector useless. This closes
  http://plone.org/products/linguaplone/issues/219.
  [hannosch]

- Fixed the language selector to work directly on the root in a virtual hosting
  environment. This closes http://plone.org/products/linguaplone/issues/216.
  [hannosch]

- Expanded the development buildout to include a simple Nginx configuration to
  make it easier to test virtual hosting issues.
  [hannosch]

- Changed the language selector to use the canonical_object_url instead of the